--- a/packages/app/.storybook/preview-head.html
+++ b/packages/app/.storybook/preview-head.html
@@ -1,5 +1,21 @@
 <style type="text/css">
+  @font-face {
+    font-family: 'Raleway-Bold';
+    src: url('../src/assets/fonts/Raleway-Bold.ttf') format('truetype');
+  }
+
+  @font-face {
+    font-family: 'Roboto-Bold';
+    src: url('../src/assets/fonts/Roboto-Bold.ttf') format('truetype');
+  }
+
+  @font-face {
+    font-family: 'Roboto-Regular';
+    src: url('../src/assets/fonts/Roboto-Regular.ttf') format('truetype');
+  }
+
   body {
     margin: 0;
+    font-family: 'Roboto-Regular', sans-serif;
   }
 </style>
