--- a/packages/app/.storybook/preview-head.html
+++ b/packages/app/.storybook/preview-head.html
@@ -1,17 +1,17 @@
 <style type="text/css">
   @font-face {
     font-family: 'Raleway-Bold';
-    src: url('../assets/fonts/Raleway-Bold.ttf') format('truetype');
+    src: url('../../assets/fonts/Raleway-Bold.ttf') format('truetype');
   }
 
   @font-face {
     font-family: 'Roboto-Bold';
-    src: url('../assets/fonts/Roboto-Bold.ttf') format('truetype');
+    src: url('../../assets/fonts/Roboto-Bold.ttf') format('truetype');
   }
 
   @font-face {
     font-family: 'Roboto-Regular';
-    src: url('../assets/fonts/Roboto-Regular.ttf') format('truetype');
+    src: url('../../assets/fonts/Roboto-Regular.ttf') format('truetype');
   }
 
   body {
