--- a/packages/app/.storybook/preview-head.html
+++ b/packages/app/.storybook/preview-head.html
@@ -1,21 +1,30 @@
 <style type="text/css">
   @font-face {
     font-family: 'Raleway-Bold';
-    src: url('../../assets/fonts/Raleway-Bold.ttf') format('truetype');
+    src: url('../assets/fonts/Raleway-Bold.ttf') format('truetype');
   }
 
   @font-face {
     font-family: 'Roboto-Bold';
-    src: url('../../assets/fonts/Roboto-Bold.ttf') format('truetype');
+    src: url('../assets/fonts/Roboto-Bold.ttf') format('truetype');
   }
 
   @font-face {
     font-family: 'Roboto-Regular';
-    src: url('../../assets/fonts/Roboto-Regular.ttf') format('truetype');
+    src: url('../assets/fonts/Roboto-Regular.ttf') format('truetype');
   }
 
-  body {
-    margin: 0;
+  html,
+  body,
+  .app-container {
     font-family: 'Roboto-Regular', sans-serif;
+    padding: 0;
+    margin: 0;
+    border: none;
+    height: 100%;
+    width: 100%;
+  }
+  *:focus {
+    outline: 0;
   }
 </style>
