App/Storybook/Align styles with web

--- a/packages/app/.storybook/preview-head.html
+++ b/packages/app/.storybook/preview-head.html
@@ -16,13 +16,14 @@
 
   html,
   body,
-  .app-container {
+  #root {
     font-family: 'Roboto-Regular', sans-serif;
     padding: 0;
     margin: 0;
     border: none;
     height: 100%;
     width: 100%;
+    display: flex;
   }
   *:focus {
     outline: 0;
